--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,16 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.23.0
+pandas==1.4.3
 Pillow==9.1.1
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
+six==1.16.0
+torch==1.10.0+cpu
+torchaudio==0.10.0+cpu
+torchvision==0.11.1+cpu
+typing_extensions==4.2.0
 Werkzeug==2.1.2
 zipp==3.8.0
